--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^16.11.9",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "autoprefixer": "^10.4.0",
+    "sass": "^1.43.4",
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
     "vue-tsc": "^0.0.24"
