--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "mockjs": "^1.1.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
@@ -16,6 +17,7 @@
     "sass": "^1.43.4",
     "typescript": "^4.3.2",
     "vite": "^2.3.8",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.0.24"
   }
 }
