--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --quiet",
-    "lint:fix": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --fix"
+    "lint:fix": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --fix",
+    "test:unit": "jest"
   },
   "dependencies": {
     "mockjs": "^1.1.0",
@@ -29,6 +30,14 @@
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "jest": "^26.6.3",
+    "@types/jest": "^26.0.20",
+    "vue-jest": "^5.0.0-alpha.7",
+    "babel-jest": "^26.6.3",
+    "@babel/preset-env": "^7.12.17",
+    "@vue/test-utils": "^2.0.0-beta.9",
+    "ts-jest": "^26.5.1",
+    "@babel/preset-typescript": "^7.12.17"
   }
 }
