--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "lint:fix": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --fix",
     "test:unit": "jest"
   },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "pre-push": "npm run test:unit"
+  },
+  "lint-staged": {
+    "*.{js,vue}": "eslint --fix"
+  },
   "dependencies": {
     "mockjs": "^1.1.0",
     "vue": "^3.0.5"
@@ -38,6 +45,8 @@
     "@babel/preset-env": "^7.12.17",
     "@vue/test-utils": "^2.0.0-beta.9",
     "ts-jest": "^26.5.1",
-    "@babel/preset-typescript": "^7.12.17"
+    "@babel/preset-typescript": "^7.12.17",
+    "lint-staged": "^10.5.4",
+    "yorkie": "^2.0.0"
   }
 }
