--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "lint": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --quiet",
-    "lint:fix": "eslint --ext .ts,tsx,vue src/** --no-error-on-unmatched-pattern --fix",
+    "lint:fix": "eslint --ext .ts,tsx,js,vue src/** --no-error-on-unmatched-pattern --fix",
     "test:unit": "jest"
   },
   "gitHooks": {
@@ -13,7 +13,7 @@
     "pre-push": "npm run test:unit"
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint --fix"
+    "*.{ts,tsx,js,vue}": "eslint --fix"
   },
   "dependencies": {
     "mockjs": "^1.1.0",
