--- a/package.json
+++ b/package.json
@@ -16,37 +16,38 @@
     "*.{ts,tsx,js,vue}": "eslint --fix"
   },
   "dependencies": {
+    "element-plus": "^2.2.21",
     "mockjs": "^1.1.0",
     "vue": "^3.0.5"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-typescript": "^7.12.17",
+    "@types/jest": "^26.0.20",
     "@types/node": "^16.11.9",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.4.0",
-    "sass": "^1.43.4",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.8",
-    "vite-plugin-mock": "^2.9.6",
-    "vue-tsc": "^0.0.24",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/test-utils": "^2.0.0-beta.9",
     "@vuedx/typescript-plugin-vue": "^0.6.3",
+    "autoprefixer": "^10.4.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
-    "prettier": "^2.2.1",
     "jest": "^26.6.3",
-    "@types/jest": "^26.0.20",
-    "vue-jest": "^5.0.0-alpha.7",
-    "babel-jest": "^26.6.3",
-    "@babel/preset-env": "^7.12.17",
-    "@vue/test-utils": "^2.0.0-beta.9",
-    "ts-jest": "^26.5.1",
-    "@babel/preset-typescript": "^7.12.17",
     "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "sass": "^1.43.4",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.3.2",
+    "vite": "^2.3.8",
+    "vite-plugin-mock": "^2.9.6",
+    "vue-jest": "^5.0.0-alpha.7",
+    "vue-tsc": "^0.0.24",
     "yorkie": "^2.0.0"
   }
 }
